WIP refactor java http api